fixed testimonial slider spacing

--- a/scss/_testimonial.scss
+++ b/scss/_testimonial.scss
@@ -27,7 +27,7 @@
         display: block;
         width: 76vw;
         margin-bottom: 6vw;
-        height: calc(76vw / 2);
+        height: calc(12rem);
       }
     }
 
