--- a/scss/main.css
+++ b/scss/main.css
@@ -688,7 +688,7 @@ table {
     display: block;
     width: 76vw;
     margin-bottom: 6vw;
-    height: calc(76vw / 2);
+    height: calc(12rem);
   }
   .testimonial .module {
     display: -webkit-box;
